Página da Lojinha HTML e CSS REV1

--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -11,7 +11,7 @@
     <header>
     <div>
         <h1 class="cabecalho1"><center>BEM-VIND@ ao <em>FERRAGEM WORLD</em>!</center></h1>
-        <h3 classe="cabecalho2"><center>FERRAMENTAS DO MUNDO INTEIRO</center></h3>
+        <h3 class="cabecalho2"><center>FERRAMENTAS DO MUNDO INTEIRO</center></h3>
     </div>
 
     <div>
