Inserindo sombra na confeitaria

--- a/quinzena4/flex-grid/index.html
+++ b/quinzena4/flex-grid/index.html
@@ -38,26 +38,26 @@
                
         <div id="container-bolos">
         <section>
-            <div>
+            <div class="sombra">
                 <img src="img/bolo_bonito.jpg" style="max-width:15em;"></img>
                 <p><h1><b>Bolo de Chocolate</b></h1><br>Delicioso bolo de chocolate<br>molhadinho decorado com morangos</p>
             </div>
-            <div>
+            <div class="sombra">
                 <img src="img/bolo_bonito.jpg" style="max-width:15em;"></img><br><h1><b>Bolo de Chocolate</b></h1><br>Delicioso bolo de chocolate<br>molhadinho decorado com morangos
             </div>
-            <div>
+            <div class="sombra">
                 <img src="img/bolo_bonito.jpg" style="max-width:15em;"></img><br><h1><b>Bolo de Chocolate</b></h1><br>Delicioso bolo de chocolate<br>molhadinho decorado com morangos
             </div>
-            <div>
+            <div class="sombra">
                 <img src="img/bolo_bonito.jpg" style="max-width:15em;"></img><br><h1><b>Bolo de Chocolate</b></h1><br>Delicioso bolo de chocolate<br>molhadinho decorado com morangos
             </div>
-            <div>
+            <div class="sombra">
                 <img src="img/bolo_bonito.jpg" style="max-width:15em;"></img><br><h1><b>Bolo de Chocolate</b></h1><br>Delicioso bolo de chocolate<br>molhadinho decorado com morangos
             </div>
-            <div>
+            <div class="sombra">
                 <img src="img/bolo_bonito.jpg" style="max-width:15em;"></img><br><h1><b>Bolo de Chocolate</b></h1><br>Delicioso bolo de chocolate<br>molhadinho decorado com morangos
             </div>
-            <div>
+            <div class="sombra">
                 <img src="img/bolo_bonito.jpg" style="max-width:15em;"></img><br><h1><b>Bolo de Chocolate</b></h1><br>Delicioso bolo de chocolate<br>molhadinho decorado com morangos
             </div>
                 
